syntax = "proto3";

package trafficLights;

service TrafficLightsService {
    rpc CreateTrafficLight (CreateTrafficLightDto) returns (TrafficLight) {}
    rpc FindAllTrafficLights (Empty) returns (TrafficLights) {}
    rpc FindOneTrafficLight (FindOneTrafficLightDto) returns (TrafficLight) {}
    rpc UpdateTrafficLight (UpdateTrafficLightDto) returns (TrafficLight) {}
    rpc RemoveTrafficLight (FindOneTrafficLightDto) returns (TrafficLight) {}
}

message UpdateTrafficLightDto {
    string id = 1;
    string name = 2;
    string location = 3;
    string mode = 4;
}

message FindOneTrafficLightDto {
    string id = 1;
}

message Empty {};

message TrafficLights {
    repeated TrafficLight trafficLights = 1;
}

message CreateTrafficLightDto {
    string name = 1;
    string location = 2;
    string mode = 3;
}

message TrafficLight{
    string id = 1;
    string name = 2;
    string location = 3;
    string mode = 4;
}